Finished CSS stylesheet for project

--- a/index.html
+++ b/index.html
@@ -21,48 +21,51 @@
         </div>
         <div id="featured">
             <h2>Tea Of The Month</h2>
-            <h4>What;s Steeping at The Tea Cozy?</h4>
+            <h4>What's Steeping at The Tea Cozy?</h4>
             <div class="img-container">
-                <figure>
+                <div class="img-box">
                     <img src="images/img-berryblitz.webp">
-                    <figcaption>Fall Berry Blitz Tea</figcaption>
-                </figure>
-                <figure>
+                    <h4>Fall Berry Blitz Tea</h4>
+                </div>
+                <div class="img-box">
                     <img src="images/img-spiced-rum.webp">
-                    <figcaption>Spiced Rum Tea</figcaption>
-                </figure>
-                <figure>
+                    <h4>Spiced Rum Tea</h4>
+                </div>
+                <div class="img-box">
                     <img src="images/img-donut.webp">
-                    <figcaption>Seasonal Donuts</figcaption>
-                </figure>
-                <figure>
+                    <h4>Seasonal Donuts</h4>
+                </div>
+                <div class="img-box">
                     <img src="images/img-myrtle-ave.webp">
-                    <figcaption>Myrtle Ave Tea</figcaption>
-                </figure>
-                <figure>
+                    <h4>Myrtle Ave Tea</h4>
+                </div>
+                <div class="img-box">
                     <img src="images/img-bedford-bizarre.webp">
-                    <figcaption>Bedford Bizarre Tea</figcaption>
-                </figure>                
+                    <h4>Bedford Bizarre Tea</h4>
+                </div>                
             </div>
         </div>
         <div id="locations">
-            <div class="location box">
-                <h3>Downtown</h3>
-                <p>384 W 4th St</p>
-                <p>Suite 108</p>
-                <p>Portland, Maine</p>
-            </div>
-            <div class="location box">
-                <h3>East Bayside</h3>
-                <p>3433 Phisherman's Avenue</p>
-                <p>(Northwest Corner)</p>
-                <p>Portland, Maine</p>
-            </div>
-            <div class="location box">
-                <h3>Oakdale</h3>
-                <p>515 Crescent Avenue</p>
-                <p>Second Floor</p>
-                <p>Portland, Maine</p>
+            <h2>Locations</h2>
+            <div class="location-container">
+                <div class="location box">
+                    <h3>Downtown</h3>
+                    <p>384 W 4th St</p>
+                    <p>Suite 108</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="location box">
+                    <h3>East Bayside</h3>
+                    <p>3433 Phisherman's Avenue</p>
+                    <p>(Northwest Corner)</p>
+                    <p>Portland, Maine</p>
+                </div>
+                <div class="location box">
+                    <h3>Oakdale</h3>
+                    <p>515 Crescent Avenue</p>
+                    <p>Second Floor</p>
+                    <p>Portland, Maine</p>
+                </div>
             </div>
         </div>
         <footer>
